<resources>
    <string name="app_name">SunCatcher</string>
    <string name="icon_name">SunCatcher</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="register_here">Register Here</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="mail">Contact us</string>
    <string name="help">Help</string>
    <string name="splashScreen">SunCatcher</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="todo">TODO</string>
    <string name="device_address">Device Address</string>
    <string name="on_off">ON/OFF</string>
    <string name="enable_discoverable">Enable Discoverable</string>
    <string name="p2pwifi">WiFi Connection</string>
    <string name="wifi_off">WiFi OFF</string>
    <string name="wifi_on">WiFI ON</string>
    <string name="title_activity_wifi">Wifi</string>
    <string name="login_register">Login/Register</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="in_use">In use</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="devices">Devices</string>
    <string name="statistics">Statistics</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
