<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bluetand"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:onClick="onBlueClick"
        android:title="@string/bluetooth"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mejl"
        android:icon="@android:drawable/ic_dialog_email"
        android:onClick="onInfoClick"
        android:title="@string/mail"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wifi"
        android:icon="@drawable/ic_mr_button_connecting_26_dark"
        android:onClick="onWifiClick"
        android:title="@string/p2pwifi"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logreg"
        android:icon="@android:drawable/ic_menu_edit"
        android:onClick="onLogregClick"
        android:title="@string/login_register"
        app:showAsAction="ifRoom" />


</menu>